// Vitest Snapshot v1

exports[`project: /cases/01_simple > should return project info entities from db: /cases/01_simple 1`] = `
[
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/add.ts/add",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/add.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
]
`;

exports[`project: /cases/01_simple > should return project info graph from db: /cases/01_simple 1`] = `
[
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/add.ts",
      "parent",
      "/add.ts/add",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "import",
      "/add.ts",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
]
`;

exports[`project: /cases/02_function > should return project info entities from db: /cases/02_function 1`] = `
[
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts/func1",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts/func2",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
]
`;

exports[`project: /cases/02_function > should return project info graph from db: /cases/02_function 1`] = `
[
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "parent",
      "/index.ts/func2",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "parent",
      "/index.ts/func1",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
]
`;

exports[`project: /cases/03_function_relation > should return project info entities from db: /cases/03_function_relation 1`] = `
[
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts/func1",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts/func3",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts/func4",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/funcs.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts/func2",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/funcs.ts/func2",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/funcs.ts/func3",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
]
`;

exports[`project: /cases/03_function_relation > should return project info graph from db: /cases/03_function_relation 1`] = `
[
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts/func1",
      "use",
      "/index.ts/func2",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts/func3",
      "use",
      "/index.ts/func2",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts/func4",
      "use",
      "/index.ts/func3",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts/func4",
      "use",
      "/index.ts/func2",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/funcs.ts",
      "parent",
      "/index.ts/func3",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/funcs.ts",
      "parent",
      "/index.ts/func2",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/funcs.ts",
      "parent",
      "/funcs.ts/func3",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/funcs.ts",
      "parent",
      "/funcs.ts/func2",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "parent",
      "/index.ts/func4",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "parent",
      "/index.ts/func3",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "parent",
      "/index.ts/func1",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "import",
      "/funcs.ts",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
]
`;

exports[`project: /cases/04_vue > should return project info entities from db: /cases/04_vue 1`] = `
[
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/cmp.vue.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/utils.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/node_modules/typescript/lib/lib.es5.d.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "vue",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/cmp.vue.ts/render",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/cmp.vue.ts/setup",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/utils.ts/utilFn",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/index.ts/cmpFunc",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/cmp.vue.ts/openBlock",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/cmp.vue.ts/createElementBlock",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/cmp.vue.ts/toDisplayString",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/cmp.vue.ts/ref",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
  Record {
    "_fieldLookup": {
      "e.id": 0,
    },
    "_fields": [
      "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    ],
    "keys": [
      "e.id",
    ],
    "length": 1,
  },
]
`;

exports[`project: /cases/04_vue > should return project info graph from db: /cases/04_vue 1`] = `
[
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts",
      "parent",
      "/cmp.vue.ts/setup",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts",
      "parent",
      "/cmp.vue.ts/render",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts",
      "import",
      "/utils.ts",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts",
      "import",
      "vue",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/utils.ts",
      "parent",
      "/utils.ts/utilFn",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/node_modules/typescript/lib/lib.es5.d.ts",
      "parent",
      "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/node_modules/typescript/lib/lib.es5.d.ts",
      "parent",
      "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "parent",
      "/index.ts/cmpFunc",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/index.ts",
      "import",
      "/cmp.vue.ts",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts/render",
      "use",
      "/cmp.vue.ts/createElementBlock",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts/render",
      "use",
      "/cmp.vue.ts/toDisplayString",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts/render",
      "use",
      "/cmp.vue.ts/openBlock",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts/setup",
      "use",
      "/utils.ts/utilFn",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts/setup",
      "use",
      "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts/setup",
      "use",
      "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
  Record {
    "_fieldLookup": {
      "n1.id": 0,
      "n2.id": 2,
      "r.relationType": 1,
    },
    "_fields": [
      "/cmp.vue.ts/setup",
      "use",
      "/cmp.vue.ts/ref",
    ],
    "keys": [
      "n1.id",
      "r.relationType",
      "n2.id",
    ],
    "length": 3,
  },
]
`;
